== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== added

=== changed

2021-10-18::
* Fix https://github.com/docToolchain/docToolchain/issues/664[#664 - doctoolchain.org link and typos]

=== fixed

2021-10-17::
* fix https://github.com/docToolchain/docToolchain/issues/660[#660 - generateSite: projectRootDir wrong]

2021-10-11::
* fix https://github.com/docToolchain/docToolchain/issues/651[#651 - powershell: broken install when space in user path]

2021-10-15::
* fix https://github.com/docToolchain/docToolchain/issues/658[#658 - generateSite - subsequent runs won't fail with an invalid or missing site theme]

== 2.0.1 - 2021-10-06

=== added

2021-10-06::
* experimental: globalReferences

=== changed

2021-10-04::
* fix https://github.com/docToolchain/docToolchain/issues/616[#616 - exportOpenAPI: Enhance the Confluence Open-API Documentation API to refer to URLs]

=== fixed

2021-10-06::
* fix https://github.com/docToolchain/docToolchain/issues/636[#636 - theme: larger admonition icons]
* fix https://github.com/docToolchain/docToolchain/issues/649[#649 - generateSite on powershell wrong file-separator]
2021-10-04::
* fix https://github.com/docToolchain/docToolchain/issues/645[#645 - exportJiraIssues: Could not get unknown property 'configFile' for task ':exportJiraIssues' of type org.gradle.api.DefaultTask]

2021-09-30::
* fix https://github.com/docToolgchain/docToolchain/issues/632[#632 - generateHTML: broken images with generateHTML]

== 2.0.0 - 2021-09-23

The 2.0.0 relase contains all changes of the release candidates.
See "https://doctoolchain.github.io/docToolchain/v2.0.x/030_news/2021/2.0.0-release.html[v2.0.0 of docToolchain has been released!]" for more details.

== 2.0.0-rc17 - 2021-09-22

=== changed

2021-09-22::